Fix compile warnings and avoid usage of deprecated classes
Change-Id: Id84c79ab170c066ed40b24ca20816d7758470a07